--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-plugin-appice" version="1.1.7">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-plugin-appice" version="1.1.8">
     <name>AppICE</name>
     <description>AppICE Plugin for Cordova/PhoneGap</description>
     <license>Commercial</license>
@@ -130,9 +130,13 @@
         <framework src="CoreGraphics.framework" />
         <framework src="UIKit.framework" />
         <framework src="Foundation.framework" />
+        
+        <hook type="after_plugin_install" src="scripts/iOSAfterPluginAdd.js" />
+    	<hook type="before_plugin_uninstall" src="scripts/iOSAfterPluginRm.js" />
     </platform>
     
     <platform name="android">
+        
     	<config-file>
     		<access origin="*.appice.io" />
     	</config-file>
@@ -180,7 +184,7 @@
 		<framework src="com.android.support:support-v4:+" />
 		<framework src="appice.io.android:sdk:+" />
     	
-    	<hook type="after_plugin_add" src="scripts/androidAfterPluginAdd.js" />
-    	
+    	<hook type="after_plugin_install" src="scripts/androidAfterPluginAdd.js" />
+    	<hook type="before_plugin_uninstall" src="scripts/androidAfterPluginRm.js" />
     </platform>
 </plugin>
