--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-plugin-appice" version="1.2.2">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-plugin-appice" version="1.2.4">
     <name>AppICE</name>
     <description>AppICE Plugin for Cordova/PhoneGap</description>
     <license>Commercial</license>
@@ -53,7 +53,7 @@
         <header-file src="src/ios/AppICEPlugin.h" />
         <source-file src="src/ios/AppICEPlugin.m" />
         
-        <source-file src="src/ios/AppICESDK/libiosAppiceSDK_v1.7.1.a" framework="true"/>
+        <source-file src="src/ios/AppICESDK/libiosAppiceSDK_v1.7.2.a" framework="true"/>
         
         <resource-file src="src/ios/AppICESDK/appICE.momd" />
     	<resource-file src="src/ios/AppICESDK/appICEBundle.bundle" />
@@ -155,18 +155,20 @@
     	</config-file>
     	
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
-			<receiver android:name="com.appice.cordova.CampaignCampsReceiver">
-            	<intent-filter>
-            	    <action android:name="com.appice.campaignEvent" />
-            	</intent-filter>
-        	</receiver>
-        	<service
-           		android:name="com.appice.cordova.NotificationEventService"
-            	android:permission="android.permission.BIND_JOB_SERVICE">
-            	<intent-filter>
-                	<action android:name="com.appice.campaignEvent" />
-            	</intent-filter>
-        	</service>
+			<receiver
+				android:name="com.appice.cordova.CampaignCampsReceiver"
+				android:protectionLevel="signature">
+				<intent-filter>
+					<action android:name="com.appice.campaignEvent" />
+				</intent-filter>
+			</receiver>
+			<service
+				android:name="com.appice.cordova.NotificationEventService"
+				android:permission="android.permission.BIND_JOB_SERVICE">
+				<intent-filter>
+					<action android:name="com.appice.campaignEvent" />
+				</intent-filter>
+			</service>
         	
 			<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 			<meta-data android:name="com.semusi.analytics.appid" android:value="$APPICE_APP_ID"/>
