--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-plugin-appice" version="1.2.9">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-plugin-appice" version="1.3.0">
     <name>AppICE</name>
     <description>AppICE Plugin for Cordova/PhoneGap</description>
     <license>Commercial</license>
@@ -155,21 +155,6 @@
     	</config-file>
     	
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
-			<receiver
-				android:name="com.appice.cordova.CampaignCampsReceiver"
-				android:protectionLevel="signature">
-				<intent-filter>
-					<action android:name="com.appice.campaignEvent" />
-				</intent-filter>
-			</receiver>
-			<service
-				android:name="com.appice.cordova.NotificationEventService"
-				android:permission="android.permission.BIND_JOB_SERVICE">
-				<intent-filter>
-					<action android:name="com.appice.campaignEvent" />
-				</intent-filter>
-			</service>
-        	
 			<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 			<meta-data android:name="com.semusi.analytics.appid" android:value="$APPICE_APP_ID"/>
         	<meta-data android:name="com.semusi.analytics.appkey" android:value="$APPICE_APP_KEY"/>
@@ -184,7 +169,8 @@
 		<framework src="com.google.android.gms:play-services-ads:16.0.0" />
 		<framework src="com.google.android.gms:play-services-location:16.0.0" />
 		<framework src="com.android.support:support-v4:+" />
-		<framework src="appice.io.android:sdk:+" />
+		<framework src="appice.io.android:cordova:+" />
+	    <framework src="appice.io.android:sdk:+" />
     	
     	<hook type="after_plugin_install" src="scripts/androidAfterPluginAdd.js" />
     	<hook type="before_plugin_uninstall" src="scripts/androidAfterPluginRm.js" />
